--- a/application/main/resources/application-local.yml
+++ b/application/main/resources/application-local.yml
@@ -4,12 +4,15 @@ logging:
 
 datasource:
   master:
-    jdbcUrl: postgres://postgres:123@localhost:15432/test?sslmode=disable;
+    jdbcUrl: postgres://postgres:123@127.0.0.1:15432/postgres?sslmode=disable;
     username: postgres
     password: 123
   slave:
-    jdbcUrl: postgres://postgres:123@localhost:25432/test?sslmode=disable;
+    jdbcUrl: postgres://postgres:123@127.0.0.1:25432/postgres?sslmode=disable;
     username: postgres
     password: 123
   config:
     socketTimeout: 60
+
+redis:
+  addr: "127.0.0.1:56379"
