--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,3 +25,14 @@ services:
     ports:
       - "56379:6379"
 
+  medicine:
+    image: medicine:1.0
+    container_name: medicine
+    ports:
+      - "18080:8080"
+    environment:
+      PROFILES_ACTIVE: dev
+    links:
+      - postgres-master
+      - postgres-slave
+      - redis
