--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
             "mode": "auto",
             "program": "${workspaceFolder}/application/main/",
             "env": {
-                "profiles_active": "local"
+                "PROFILES_ACTIVE": "local"
             },
             "args": ["local"]
         }
