--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,11 +5,24 @@
   "version": "0.2.0",
     "configurations": [
         {
-            "name": "Launch",
+            "name": "Launch usercenter",
             "type": "go",
             "request": "launch",
-            "mode": "auto",
-            "program": "${workspaceFolder}/application/main/",
+            "mode": "debug",
+            "port": 8081,
+            "program": "${workspaceFolder}/usercenter/application/main/",
+            "env": {
+                "PROFILES_ACTIVE": "local"
+            },
+            "args": ["local"]
+        },
+        {
+            "name": "Launch ordercenter",
+            "type": "go",
+            "request": "launch",
+            "mode": "debug",
+            "port": 8082,
+            "program": "${workspaceFolder}/ordercenter/application/main/",
             "env": {
                 "PROFILES_ACTIVE": "local"
             },
