--- a/ordercenter/application/main/resources/application-dev.yml
+++ b/ordercenter/application/main/resources/application-dev.yml
@@ -4,15 +4,18 @@ logging:
 
 datasource:
   master:
-    jdbcUrl: postgres://postgres:123@postgres-master:5432/order?sslmode=disable;
+    jdbcUrl: postgres://postgres:123@postgres-master:5432/ordercenter?sslmode=disable;
     username: postgres
     password: 123
   slave:
-    jdbcUrl: postgres://postgres:123@postgres-slave:5432/order?sslmode=disable;
+    jdbcUrl: postgres://postgres:123@postgres-slave:5432/ordercenter?sslmode=disable;
     username: postgres
     password: 123
   config:
     socketTimeout: 60
 
 redis:
-  addr: "medicine-redis:6379"
+  addr: "redis:6379"
+
+gin:
+  port: ":8080"
