--- a/devops/docker-compose.yml
+++ b/devops/docker-compose.yml
@@ -1,60 +1,19 @@
-version: '3'
+version: "3.5"
 services:
-  postgres-master:
-    image: postgres-test:11.2
-    container_name: postgres-master
-    ports:
-      - 15432:5432
+  mysql:
+    image: mysql:8.0
+    container_name: medicine-mysql
+    volumes: 
+      - ./init.sql:/docker-entrypoint-initdb.d/init.sql
     environment:
-      PG_ROLE: master
-      POSTGRES_PASSWORD: 123
-  postgres-slave:
-    image: postgres-test:11.2
-    container_name: postgres-slave
+      - TZ=Asia/Shanghai
+      - MYSQL_ROOT_PASSWORD=123
     ports:
-      - 25432:5432
-    depends_on:
-      - postgres-master
-    environment:
-      PG_ROLE: slave
-      PG_MASTER_SERVICE_HOST: postgres-master
+      - 3306:3306
+    command: ['mysqld', '--character-set-server=utf8mb4', '--collation-server=utf8mb4_general_ci']
 
   redis:
-    image: redis:5
-    container_name: redis
+    image: redis:6.2.6
+    container_name: medicine-redis
     ports:
       - "56379:6379"
-
-  usercenter:
-    image: usercenter:1.0
-    container_name: usercenter
-    ports:
-      - "18080:8080"
-    environment:
-      PROFILES_ACTIVE: dev
-    links:
-      - postgres-master
-      - postgres-slave
-      - redis
-
-  ordercenter:
-    image: ordercenter:1.0
-    container_name: ordercenter
-    ports:
-      - "28080:8080"
-    environment:
-      PROFILES_ACTIVE: dev
-    links:
-      - postgres-master
-      - postgres-slave
-      - redis
-
-  tocbff:
-    image: tocbff:1.0
-    container_name: tocbff
-    ports:
-      - "38080:8080"
-    environment:
-      PROFILES_ACTIVE: dev
-    links:
-      - ordercenter
