--- a/usercenter/configs/application-dev.yml
+++ b/usercenter/configs/application-dev.yml
@@ -3,11 +3,11 @@ logging:
 
 datasource:
   master:
-    jdbcUrl: root:123@tcp(localhost:3306)/ordercenter?multiStatements=true
+    jdbcUrl: root:123@tcp(localhost:3306)/usercenter?multiStatements=true
     username: root
     password: 123
   slave:
-    jdbcUrl: root:123@tcp(localhost:3306)/ordercenter?multiStatements=true
+    jdbcUrl: root:123@tcp(localhost:3306)/usercenter?multiStatements=true
     username: root
     password: 123
   config:
